--- a/plugins/extended-entity-picker/package.json
+++ b/plugins/extended-entity-picker/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "@internal/backstage-plugin-extended-entity-picker",
-  "version": "0.1.0",
+  "name": "@web-seven/backstage-plugin-extended-entity-picker",
+  "version": "0.0.1",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
-  "private": true,
+  "private": false,
   "publishConfig": {
     "access": "public",
     "main": "dist/index.esm.js",
     "types": "dist/index.d.ts"
   },
   "backstage": {
-    "role": "frontend-plugin"
+    "role": "frontend-plugin",
+    "pluginId": "extended-entity-picker",
+    "pluginPackages": [
+      "@web-seven/backstage-plugin-extended-entity-picker"
+    ]
   },
   "sideEffects": false,
   "scripts": {
