--- a/plugins/extended-entity-picker/package.json
+++ b/plugins/extended-entity-picker/package.json
@@ -48,7 +48,8 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
     "msw": "^1.0.0",
-    "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
+    "react": "^16.13.1 || ^17.0.0 || ^18.0.0",
+    "@types/react-window": "1.8.8"
   },
   "files": [
     "dist"
