--- a/plugins/scaffolder-field-extensions/package.json
+++ b/plugins/scaffolder-field-extensions/package.json
@@ -47,9 +47,9 @@
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
+    "@types/react-window": "1.8.8",
     "msw": "^1.0.0",
-    "react": "^16.13.1 || ^17.0.0 || ^18.0.0",
-    "@types/react-window": "1.8.8"
+    "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
   },
   "files": [
     "dist"
