added entity value picker

--- a/plugins/scaffolder-field-extensions/package.json
+++ b/plugins/scaffolder-field-extensions/package.json
@@ -10,6 +10,9 @@
     "main": "dist/index.esm.js",
     "types": "dist/index.d.ts"
   },
+  "backstage": {
+    "role": "frontend-plugin"
+  },
   "sideEffects": false,
   "scripts": {
     "start": "backstage-cli package start",
