--- a/plugins/backstage-plugin-scaffolder-extensions/package.json
+++ b/plugins/backstage-plugin-scaffolder-extensions/package.json
@@ -49,7 +49,8 @@
     "@testing-library/user-event": "^14.0.0",
     "@types/react-window": "1.8.8",
     "msw": "^1.0.0",
-    "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
+    "react": "^16.13.1 || ^17.0.0 || ^18.0.0",
+    "@types/nunjucks": "^3.1.4"
   },
   "files": [
     "dist"
