--- a/plugins/scaffolder-backend-module-sealed-secrets/package.json
+++ b/plugins/scaffolder-backend-module-sealed-secrets/package.json
@@ -33,6 +33,8 @@
     "@backstage/cli": "^0.26.11"
   },
   "files": [
-    "dist"
-  ]
+    "dist",
+    "config.d.ts"
+  ],
+  "configSchema": "config.d.ts"
 }
