--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -26,6 +26,7 @@
     "@backstage/plugin-auth-backend-module-guest-provider": "^0.1.8",
     "@backstage/plugin-auth-node": "^0.4.17",
     "@backstage/plugin-catalog-backend": "^1.24.0",
+    "@backstage/plugin-catalog-backend-module-github": "^0.7.2",
     "@backstage/plugin-catalog-backend-module-logs": "^0.0.1",
     "@backstage/plugin-catalog-backend-module-scaffolder-entity-model": "^0.1.20",
     "@backstage/plugin-permission-backend": "^0.5.46",
@@ -41,6 +42,7 @@
     "@backstage/plugin-search-backend-node": "^1.2.27",
     "@backstage/plugin-techdocs-backend": "^1.10.9",
     "@web-seven/backstage-plugin-scaffolder-backend-module-sealed-secrets": "^0.1.0",
+    "@web-seven/backstage-plugin-scaffolder-backend-module-encode-filters": "^0.1.0",
     "app": "link:../app",
     "better-sqlite3": "^9.0.0",
     "node-gyp": "^10.0.0",
