--- a/plugins/scaffolder-backend-module-encode-filters/package.json
+++ b/plugins/scaffolder-backend-module-encode-filters/package.json
@@ -1,17 +1,21 @@
 {
   "name": "@web-seven/backstage-plugin-scaffolder-backend-module-encode-filters",
-  "version": "0.1.0",
+  "version": "0.0.2",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
-  "private": true,
+  "private": false,
   "publishConfig": {
     "access": "public",
     "main": "dist/index.cjs.js",
     "types": "dist/index.d.ts"
   },
   "backstage": {
-    "role": "backend-plugin"
+    "role": "backend-plugin",
+    "pluginId": "scaffolder-backend-module-encode-filters",
+    "pluginPackages": [
+      "@web-seven/backstage-plugin-scaffolder-backend-module-encode-filters"
+    ]
   },
   "scripts": {
     "start": "backstage-cli package start",
