--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@backstage/backend-common": "^0.23.3",
     "@backstage/backend-defaults": "^0.4.0",
+    "@backstage/backend-plugin-api": "^1.0.0",
     "@backstage/backend-tasks": "^0.5.27",
     "@backstage/config": "^1.2.0",
     "@backstage/plugin-app-backend": "^0.3.71",
