--- a/plugins/backstage-module-crossplane/package.json
+++ b/plugins/backstage-module-crossplane/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@web-seven/backstage-plugin-openfga-common",
-  "description": "Common functionalities for the openfga plugin",
+  "name": "@web-seven/backstage-module-crossplane",
+  "description": "The crossplane-provider backend module for the catalog plugin.",
   "version": "0.1.0",
   "main": "src/index.ts",
   "types": "src/index.ts",
@@ -9,14 +9,13 @@
   "publishConfig": {
     "access": "public",
     "main": "dist/index.cjs.js",
-    "module": "dist/index.esm.js",
     "types": "dist/index.d.ts"
   },
   "backstage": {
-    "role": "common-library"
+    "role": "backend-plugin-module"
   },
-  "sideEffects": false,
   "scripts": {
+    "start": "backstage-cli package start",
     "build": "backstage-cli package build",
     "lint": "backstage-cli package lint",
     "test": "backstage-cli package test",
@@ -24,7 +23,12 @@
     "prepack": "backstage-cli package prepack",
     "postpack": "backstage-cli package postpack"
   },
+  "dependencies": {
+    "@backstage/backend-common": "^0.25.0",
+    "@backstage/backend-plugin-api": "^1.0.0"
+  },
   "devDependencies": {
+    "@backstage/backend-test-utils": "^1.0.0",
     "@backstage/cli": "^0.27.1"
   },
   "files": [
