--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -30,6 +30,7 @@
     "@backstage/plugin-org": "^0.6.27",
     "@backstage/plugin-permission-react": "^0.4.24",
     "@backstage/plugin-scaffolder": "^1.23.0",
+    "@backstage/plugin-scaffolder-react": "^1.13.0",
     "@backstage/plugin-search": "^1.4.14",
     "@backstage/plugin-search-react": "^1.7.13",
     "@backstage/plugin-techdocs": "^1.10.7",
@@ -37,10 +38,10 @@
     "@backstage/plugin-techdocs-react": "^1.2.6",
     "@backstage/plugin-user-settings": "^0.8.9",
     "@backstage/theme": "^0.5.6",
-    "@web-seven/backstage-plugin-scaffolder-extensions": "~0.0.1",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
     "@web-seven/backstage-plugin-openfga": "^0.1.0",
+    "@web-seven/backstage-plugin-scaffolder-extensions": "~0.0.1",
     "history": "^5.0.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
