--- a/plugins/backstage-plugin-openfga/package.json
+++ b/plugins/backstage-plugin-openfga/package.json
@@ -26,14 +26,18 @@
   "dependencies": {
     "@backstage/core-components": "^0.14.9",
     "@backstage/core-plugin-api": "^1.9.3",
+    "@backstage/errors": "^1.2.4",
+    "@backstage/plugin-catalog-react": "^1.14.0",
     "@backstage/theme": "^0.5.6",
+    "@backstage/types": "^1.1.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.61",
     "@mui/x-data-grid": "^4.0.2",
-    "react-use": "^17.2.4"
+    "react-use": "^17.2.4",
+    "@web-seven/backstage-plugin-openfga-backend": "~0.1.0"
   },
   "peerDependencies": {
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
