--- a/plugins/backstage-plugin-scaffolder-extensions/package.json
+++ b/plugins/backstage-plugin-scaffolder-extensions/package.json
@@ -28,16 +28,28 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
+    "@backstage/catalog-client": "^1.7.1",
+    "@backstage/catalog-model": "^1.7.0",
     "@backstage/core-components": "^0.14.9",
     "@backstage/core-plugin-api": "^1.9.3",
+    "@backstage/plugin-catalog-react": "^1.14.0",
+    "@backstage/plugin-scaffolder": "^1.26.0",
+    "@backstage/plugin-scaffolder-react": "^1.13.0",
     "@backstage/theme": "^0.5.6",
+    "@backstage/types": "^1.1.1",
+    "@backstage/version-bridge": "^1.0.10",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.61",
-    "react-use": "^17.2.4"
+    "nunjucks": "^3.2.4",
+    "qs": "^6.13.0",
+    "react-use": "^17.2.4",
+    "react-window": "^1.8.10",
+    "zod": "^3.23.8"
   },
   "peerDependencies": {
-    "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
+    "react": "^16.13.1 || ^17.0.0 || ^18.0.0",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@backstage/cli": "^0.26.11",
@@ -47,10 +59,10 @@
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
+    "@types/nunjucks": "^3.1.4",
     "@types/react-window": "1.8.8",
     "msw": "^1.0.0",
-    "react": "^16.13.1 || ^17.0.0 || ^18.0.0",
-    "@types/nunjucks": "^3.1.4"
+    "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
   },
   "files": [
     "dist"
