--- a/plugins/scaffolder-backend-module-sealed-secrets/package.json
+++ b/plugins/scaffolder-backend-module-sealed-secrets/package.json
@@ -28,7 +28,9 @@
   "dependencies": {
     "@backstage/backend-common": "^0.23.3",
     "@backstage/backend-plugin-api": "^0.7.0",
-    "@kubernetes/client-node": "0.21.0"
+    "@backstage/plugin-scaffolder-node": "^0.5.0",
+    "@kubernetes/client-node": "0.21.0",
+    "node-forge": "^1.3.1"
   },
   "devDependencies": {
     "@backstage/backend-test-utils": "^0.4.4",
