--- a/plugins/backstage-plugin-openfga-backend/package.json
+++ b/plugins/backstage-plugin-openfga-backend/package.json
@@ -41,7 +41,7 @@
     "@backstage/cli": "^0.26.11",
     "@backstage/plugin-auth-backend": "^0.22.9",
     "@backstage/plugin-auth-backend-module-guest-provider": "^0.1.8",
-    "@types/express": "*",
+    "@types/express": "^4.17.1",
     "@types/supertest": "^2.0.12",
     "msw": "^2.3.1",
     "supertest": "^6.2.4"
