--- a/plugins/backstage-plugin-scaffolder-extensions/package.json
+++ b/plugins/backstage-plugin-scaffolder-extensions/package.json
@@ -41,7 +41,9 @@
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.61",
+    "@types/pako": "^2.0.3",
     "nunjucks": "^3.2.4",
+    "pako": "^2.1.0",
     "qs": "^6.13.0",
     "react-use": "^17.2.4",
     "react-window": "^1.8.10",
