--- a/plugins/scaffolder-backend-module-encode-filters/package.json
+++ b/plugins/scaffolder-backend-module-encode-filters/package.json
@@ -35,7 +35,8 @@
     "@backstage/types": "^1.1.1",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "pako": "^2.1.0"
   },
   "devDependencies": {
     "@backstage/backend-test-utils": "^0.4.4",
