--- a/plugins/backstage-plugin-openfga-backend/package.json
+++ b/plugins/backstage-plugin-openfga-backend/package.json
@@ -4,14 +4,18 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
-  "private": true,
+  "private": false,
   "publishConfig": {
     "access": "public",
     "main": "dist/index.cjs.js",
     "types": "dist/index.d.ts"
   },
   "backstage": {
-    "role": "backend-plugin"
+    "role": "backend-plugin",
+    "pluginId": "backstage-plugin-openfga-backend",
+    "pluginPackages": [
+      "@web-seven/backstage-plugin-openfga-backend"
+    ]
   },
   "scripts": {
     "start": "backstage-cli package start",
