--- a/plugins/backstage-plugin-openfga/package.json
+++ b/plugins/backstage-plugin-openfga/package.json
@@ -4,14 +4,18 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
-  "private": true,
+  "private": false,
   "publishConfig": {
     "access": "public",
     "main": "dist/index.esm.js",
     "types": "dist/index.d.ts"
   },
   "backstage": {
-    "role": "frontend-plugin"
+    "role": "frontend-plugin",
+    "pluginId": "backstage-plugin-openfga",
+    "pluginPackages": [
+      "@web-seven/backstage-plugin-openfga"
+    ]
   },
   "sideEffects": false,
   "scripts": {
