--- a/plugins/backstage-module-openfga/package.json
+++ b/plugins/backstage-module-openfga/package.json
@@ -5,14 +5,16 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
-  "private": true,
+  "private": false,
   "publishConfig": {
     "access": "public",
     "main": "dist/index.cjs.js",
     "types": "dist/index.d.ts"
   },
   "backstage": {
-    "role": "backend-plugin-module"
+    "role": "backend-plugin-module",
+    "pluginId": "backend-plugin-module-openfga",
+    "pluginPackage": "@web-seven/backend-plugin-module-openfga"
   },
   "scripts": {
     "start": "backstage-cli package start",
