107-featopenfga-create-or-reuse-store-by-name

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -112,6 +112,7 @@ openfga:
   host: ${OPENFGA_HOST}
   # storeId: ${OPENFGA_STORE_ID}
   storeName: backstage
+  adminGroup: admin
   plugins:
     - catalog
     - scaffolder
