--- a/examples/org.yaml
+++ b/examples/org.yaml
@@ -4,6 +4,7 @@ apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
   name: guest
+  namespace: development
 spec:
   memberOf: [guests]
 ---
@@ -12,6 +13,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Group
 metadata:
   name: guests
+  namespace: development
 spec:
   type: team
   children: []
