--- a/plugins/module-openfga-permission-policy/package.json
+++ b/plugins/module-openfga-permission-policy/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@web-seven/backstage-module-openfga-permission-policy",
   "description": "The permission-policy backend module for the permission plugin.",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
@@ -30,7 +30,9 @@
     "@backstage/backend-plugin-api": "^0.7.0",
     "@backstage/plugin-permission-common": "^0.8.1",
     "@backstage/plugin-permission-node": "^0.8.4",
-    "@web-seven/backstage-backend-plugin-openfga": "^0.1.0"
+    "@web-seven/backstage-backend-plugin-openfga": "^0.1.1",
+    "@backstage/catalog-model": "^1.7.3",
+    "@backstage/config": "^1.3.2"
   },
   "devDependencies": {
     "@backstage/backend-test-utils": "^0.4.4",
